# IntervalTrainer

./: .gitignore  Cargo.toml  Dioxus.toml  NOTES  README.md  bundle.sh  serve.sh
assets/styles/: main.css  normalize.css  settings.css
sounds/: sort.py
sounds/piano/: acoustic_grand_piano-mp3.json  parse.py
src/: instrument.rs  main.rs  settings.rs  statistics.rs  trainer.rs
