[package]
name = "interval-training"
version = "0.1.0"
authors = ["z2_ <88509734+z2-2z@users.noreply.github.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
rand = "0.9.1"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
